BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/RFRRoleIdNotFound.java
package com.example.demo.error;

public class RFRRoleIdNotFound  extends RuntimeException {
	public RFRRoleIdNotFound () {
		super("RFR role id not found");
	}
}
